syntax = "proto3";
package kira.staking;

option go_package = "github.com/KiraCore/sekai/x/staking/types";

message PageRequest {
  bytes key = 1;

  uint64 offset = 2;

  uint64 limit = 3;

  bool count_total = 4;
}

message PageResponse {
  bytes next_key = 1;
  
  uint64 total = 2;
}
