syntax = "proto3";
package kira.staking;

import "staking.proto";
import "pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/KiraCore/sekai/x/staking/types";

// Query defines the gRPC querier service
service Query {
  // Validators queries a validator by address.
  rpc ValidatorByAddress (ValidatorByAddressRequest) returns (ValidatorResponse) {}

  // Validators queries a validator by moniker.
  rpc ValidatorByMoniker (ValidatorByMonikerRequest) returns (ValidatorResponse) {}

  // Validators queries all validators by pagination
  rpc Validators(ValidatorsRequest) returns (ValidatorsResponse) {
    option (google.api.http).get = "/kira/staking/validators";
  }
}

message ValidatorByAddressRequest {
  bytes val_addr = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ValAddress",
    (gogoproto.moretags) = "yaml:\"val_addr\""
  ];
}

message ValidatorByMonikerRequest {
  string moniker = 1;
}

message ValidatorResponse {
  kira.staking.Validator validator = 1 [(gogoproto.nullable) = false];
}

// ValidatorsRequest is the request type for validators query.
message ValidatorsRequest {
  string address = 1;
  string valkey = 2;
  string pubkey = 3;
  string moniker = 4;
  string status = 5;
  kira.staking.PageRequest pagination = 6 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types/query.PageRequest"];
}

message QueryValidator {
  option (gogoproto.equal)            = true;

  string address = 1;
  string valkey = 2;
  string pubkey = 3;
  string moniker = 4;
  string website = 5;
  string social = 6;
  string identity = 7;
  string commission = 8;
  string status = 9;
  int64 rank = 10;
  int64 streak = 11;
  int64 mischance = 12;
}

// ValidatorsResponse is the response type for validators query.
message ValidatorsResponse {
  repeated QueryValidator validators = 1 [(gogoproto.nullable) = false];
  kira.staking.PageResponse pagination = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types/query.PageResponse"];
}
